examples/namespaced/apigateway/v1alpha1/gateway.yaml
apiVersion: apigateway.oci.m.upbound.io/v1alpha1
kind: Gateway
metadata:
  name: gateway1
  labels:
    testing.upbound.io/example-name: gateway_label_1
  namespace: ${TARGET_NAMESPACE}
spec:
  forProvider:
    displayName: gateway1
    compartmentIdSelector:
      matchLabels:
        testing.upbound.io/example-name: compartment_label_1
    endpointType: PUBLIC
    subnetIdSelector:
      matchLabels:
        testing.upbound.io/example-name: subnet_label_1
  # providerConfig defaults to "ClusterProviderConfig"; set providerConfigRef to "ProviderConfig" to use namespaced providerConfig.
  providerConfigRef:
    name: default
    kind: ProviderConfig
